--- a/manual/about-pride.html
+++ b/manual/about-pride.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 		<div class="subpage-menu">
-			<a href="index.html"><i class="fa fa-home"></i> Home</a>
+			<a href="http://pride.pm"><i class="fa fa-home"></i> Home</a>
 		</div>
 		<section id="three" class="wrapper">
 			<div class="inner">
@@ -44,7 +44,11 @@
 <p>The chapter <a href="pride-design-principles.html">PriDE design principles</a> gives an overview about the concepts which the framework is based on. However, before diving into more theory, it is recommended to walk through the <a href="quick-start-tutorial.html">quick start tutorial</a> and get into touch with the real world.</p>
 <h2 id="about-this-manual">About this manual</h2>
 <p>This manual gives you a complete overview about PriDE’s standard functionality, design patterns and design principles. It is not mandatory to work through all the details unless you want to become an expert. However, it is strongly recommended to begin with the <a href="quick-start-tutorial.html">quick start tutorial</a> as many code fragments in other chapters come back to the quick start example. The chapters <a href="find-and-query.html">Find and Query</a> and <a href="insert-update-and-delete.html">Insert, Update, and Delete</a> describe the core functionality you should become familiar with. All other chapters describe special aspects which you can dive into, when the time has come.</p>
-<p>Many code fragments in this manual refer to existing example code which is either included in every PriDE delivery or can be <a href="https://github.com/j-pride/pride.pm/tree/master/examples">downloaded from GitHub</a>.</p>
+<p>Many code fragments in this manual refer to existing example code which is available in an <a href="https://github.com/j-pride/manual-example-code">appropriate repository on GitHub</a>. The repository includes a <a href="https://github.com/j-pride/manual-example-code/blob/master/pom.xml">pom.xml</a> file to run all examples on a local SQLite database. To have all source code at your fingertips at any time it is recommended to</p>
+<ul>
+<li>clone the repository (<code>git clone https://github.com/j-pride/manual-example-code.git</code>) and</li>
+<li>build the project using Maven (<code>mvn clean compile</code>)</li>
+</ul>
 <p>At January 2019, the PriDE 3 manual is work in progress. Beside the core chapters above there are chapters coming soon for the following aspects</p>
 <h4 id="joins">Joins</h4>
 <h4 id="optimistic-locking">Optimistic Locking</h4>
