--- a/manual/entity-adapter-and-descriptor.html
+++ b/manual/entity-adapter-and-descriptor.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 		<div class="subpage-menu">
-			<a href="index.html"><i class="fa fa-home"></i> Home</a>
+			<a href="http://pride.pm"><i class="fa fa-home"></i> Home</a>
 		</div>
 		<section id="three" class="wrapper">
 			<div class="inner">
@@ -49,7 +49,7 @@
 <pre><code>java
 -D... see quick start tutorial
 pm.pride.util.generator.EntityGenerator CUSTOMER adapter.CustomerEntity -b &gt; CustomerEntity.java</code></pre>
-<p>The parameter -b tells the generator to create only an entity class without descriptor. The result is an ordinary POJO class:</p>
+<p>The parameter -b tells the generator to create only an entity class without descriptor. The result is an ordinary Java bean or POJO class:</p>
 <pre><code>package adapter;
 
 public class CustomerEntity implements Cloneable, java.io.Serializable {
