--- a/manual/joins.html
+++ b/manual/joins.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 		<div class="subpage-menu">
-			<a href="index.html"><i class="fa fa-home"></i> Home</a>
+			<a href="http://pride.pm"><i class="fa fa-home"></i> Home</a>
 		</div>
 		<section id="three" class="wrapper">
 			<div class="inner">
@@ -38,7 +38,7 @@
     street varchar(30),
     city varchar(30)
 );</code></pre>
-Each customer optionally has an address attached. You find a corresponding entity and a table creation class in the directory examples/joins.
+Each customer optionally has an address attached. You find a corresponding <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/joins/Address.java">Address entity</a> and a <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/joins/CreateAddressTable.java">table creation class</a> in the package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/joins">joins</a> of PriDE’s manual examples source code repository on <a href="https://github.com/j-pride/manual-example-code">GitHub</a>.
 <div class="subpage-navigation">
 <p>
 <a id="prev" href="sql-expression-builder.html"> Prev.</a>
